Added expand pin image view functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="pin_tags">Pin Tags</string>
     <string name="save">Save</string>
     <string name="change_pin">Change Pin</string>
+    <string name="expand_view">expandViewTransition</string>
 </resources>
