Changed app to use Firebase for storage

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="save">Save</string>
     <string name="change_pin">Change Pin</string>
     <string name="expand_view">expandViewTransition</string>
+    <string name="add_board">Add Board</string>
 </resources>
